assets/sass/landing.sass
.landing
    background-color: $primary
    color: $white
    padding: 10px 0 30px
    text-align: left    

    +landscape
        padding: 30px 0        
        text-align: center

    h1
        font-size: 26 px
        font-weight: bold
        margin: 0

    h2
        font-size: 16px
        font-weight: normal
        margin: 0

        +landscape
            font-size: 20px

.landing-download
    display: none
    margin: 40px 0
    text-align: center

    +landscape
        display: block

    a
        background-color: $white
        border: 1px solid $grey-lighter
        border-radius: 3px
        color: $black
        padding: 10px 15px
        text-decoration: none

        &:hover
            border: 1px solid $grey-light
            box-shadow: $box-shadow-md

.blurb
    display: grid
    padding: 0

    display: grid
    grid-template-columns: 1fr

    +landscape
        grid-template-columns: 1fr 2fr
        padding: 0 50px

    p
        padding: 3px 0

        +landscape
            padding: 10px 0

    img
        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.12), 0 2px 4px 0 rgba(0,0,0,0.08);
        margin: 0
        max-width: 100%

.latest-update
    background-color: $info
    width: 100%

